[FINTRACK-10]: Created category crud operations
