# scripts/openapi.yaml
@@ -167,7 +167,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/UpdateTransactionReq'
+            $ref: '#/components/schemas/UpdateCategoryReq'
       description: Category to be updated
       required: true
 
@@ -221,14 +221,14 @@ components:
       in: path
       required: true
       schema:
-        $ref: '#/components/schemas/TransactionId'
+        $ref: '#/components/schemas/ID'
 
     CategoryId:
-      name: categoryId
+      name: id
       in: path
       required: true
       schema:
-        $ref: '#/components/schemas/CategoryId'
+        $ref: '#/components/schemas/ID'
 
 
 
@@ -283,7 +283,7 @@ components:
         type:
           $ref: '#/components/schemas/TransactionType'
         color:
-          $ref: '#/components/schemas/Timestamp'
+          $ref: '#/components/schemas/Color'
         category:
           $ref: '#/components/schemas/Category'
 
@@ -294,9 +294,16 @@ components:
 
     Transaction:
       type: object
+      required:
+        - id
+        - name
+        - date
+        - category
+        - amount
+        - notes
       properties:
-        transactionId:
-          $ref: '#/components/schemas/TransactionId'
+        id:
+          $ref: '#/components/schemas/ID'
         name:
           $ref: '#/components/schemas/Name'
         date:
@@ -310,9 +317,14 @@ components:
 
     Category:
       type: object
+      required:
+        - id
+        - name
+        - type
+        - color
       properties:
-        categoryId:
-          $ref: '#/components/schemas/CategoryId'
+        id:
+          $ref: '#/components/schemas/ID'
         name:
           $ref: '#/components/schemas/Name'
         type:
@@ -323,11 +335,9 @@ components:
           type: integer
           description: Number of transactions in this category
 
-
-    CategoryId:
-      type: number
-    TransactionId:
-      type: number
+    ID:
+      type: integer
+      description: Unique identifier for the resource
     Name:
       type: string
     Timestamp:
@@ -342,6 +352,7 @@ components:
       type: string
       format: color
       example: '#000000'
+    
 
 
     TransactionType:
@@ -349,6 +360,7 @@ components:
       enum:
         - INCOME
         - OUTCOME
+        - INCOME/OUTCOME
 
     FromYear:
       type: string
